overlays/uksouth-dev/olympus/angelia/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api.${cluster_name}.${cluster_location}.bink.sh-angelia
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.${cluster_name}.${cluster_location}.bink.sh`) && PathPrefix(`/v2`)
      services:
      - kind: Service
        name: angelia-api
        port: 80
      middlewares:
        - name: api-reflector-custom-headers
